Made Button Invisible fixed small bug

--- a/www/style.css
+++ b/www/style.css
@@ -76,6 +76,13 @@ html,body {
 
 }
 
+button {
+
+    background: transparent;
+    border: none !important;
+    font-size:0;
+}
+
 .orangewrap {
     overflow: hidden;
     position: relative;
